{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 15,
  "lineage": "2d8d18ab-0378-0ed2-adc0-e0dad7ce756b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:716920920468:instance/i-0277e69baf70ac67f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0277e69baf70ac67f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-082504bfa267cedb0"
              }
            ],
            "primary_network_interface_id": "eni-082504bfa267cedb0",
            "private_dns": "ip-172-31-5-222.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.222",
            "public_dns": "ec2-44-195-43-206.compute-1.amazonaws.com",
            "public_ip": "44.195.43.206",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ac51f67f23dff213",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "jenkins-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa91ba813a4ff5de",
            "tags": {
              "Name": "jenkins",
              "Project": "SpringBootCICD"
            },
            "tags_all": {
              "Name": "jenkins",
              "Project": "SpringBootCICD"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01809c118a263c68b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "i-0277e69baf70ac67f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.main_key",
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:716920920468:instance/i-0d23eec81cb81da54",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d23eec81cb81da54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-048f0b1af2c175315"
              }
            ],
            "primary_network_interface_id": "eni-048f0b1af2c175315",
            "private_dns": "ip-172-31-14-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.128",
            "public_dns": "ec2-44-213-103-183.compute-1.amazonaws.com",
            "public_ip": "44.213.103.183",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-074d5842e6ed21272",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sonarqube-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa91ba813a4ff5de",
            "tags": {
              "Name": "sonarqube",
              "Project": "SpringBootCICD"
            },
            "tags_all": {
              "Name": "sonarqube",
              "Project": "SpringBootCICD"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0452c74c1143507b0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "i-0d23eec81cb81da54",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.main_key",
            "aws_security_group.sonarqube_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group/sg-01809c118a263c68b",
            "description": "Security group for Jenkins",
            "egress": [],
            "id": "sg-01809c118a263c68b",
            "ingress": [],
            "name": "jenkins-server-sg",
            "name_prefix": "",
            "owner_id": "716920920468",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-server-sg",
              "Project": "SpringBootCICD"
            },
            "tags_all": {
              "Name": "jenkins-server-sg",
              "Project": "SpringBootCICD"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f82f79350c12674"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sg-01809c118a263c68b",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group/sg-0452c74c1143507b0",
            "description": "Security group for SonarQube",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0452c74c1143507b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "175.100.53.222/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "175.100.53.222/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sonarqube-server-sg",
            "name_prefix": "",
            "owner_id": "716920920468",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube-server-sg",
              "Project": "SpringBootCICD"
            },
            "tags_all": {
              "Name": "sonarqube-server-sg",
              "Project": "SpringBootCICD"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f82f79350c12674"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sg-0452c74c1143507b0",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "jenkins_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group-rule/sgr-0d62b933522ed8999",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d62b933522ed8999",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01809c118a263c68b",
            "security_group_rule_id": "sgr-0d62b933522ed8999",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sgr-0d62b933522ed8999",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sonarqube_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group-rule/sgr-0cc153858b5f4ae5a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cc153858b5f4ae5a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0452c74c1143507b0",
            "security_group_rule_id": "sgr-0cc153858b5f4ae5a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sgr-0cc153858b5f4ae5a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sonarqube_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "jenkins_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group-rule/sgr-030f617dc6cc1ff01",
            "cidr_ipv4": "175.100.53.222/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-030f617dc6cc1ff01",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01809c118a263c68b",
            "security_group_rule_id": "sgr-030f617dc6cc1ff01",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sgr-030f617dc6cc1ff01",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "jenkins_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group-rule/sgr-0ae9f7eebe3ca8b4f",
            "cidr_ipv4": "175.100.53.222/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ae9f7eebe3ca8b4f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01809c118a263c68b",
            "security_group_rule_id": "sgr-0ae9f7eebe3ca8b4f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sgr-0ae9f7eebe3ca8b4f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sonarqube_from_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group-rule/sgr-026780eacf66a3d70",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-026780eacf66a3d70",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01809c118a263c68b",
            "region": "us-east-1",
            "security_group_id": "sg-0452c74c1143507b0",
            "security_group_rule_id": "sgr-026780eacf66a3d70",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sgr-026780eacf66a3d70",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_security_group.sonarqube_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sonarqube_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group-rule/sgr-0779685f330adf9da",
            "cidr_ipv4": "175.100.53.222/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0779685f330adf9da",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0452c74c1143507b0",
            "security_group_rule_id": "sgr-0779685f330adf9da",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sgr-0779685f330adf9da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sonarqube_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sonarqube_web_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716920920468:security-group-rule/sgr-0c595fb22062332db",
            "cidr_ipv4": "175.100.53.222/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c595fb22062332db",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0452c74c1143507b0",
            "security_group_rule_id": "sgr-0c595fb22062332db",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "716920920468",
            "id": "sgr-0c595fb22062332db",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sonarqube_sg"
          ]
        }
      ]
    }
  ]
}